--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="header_publisher">출판사 : %s</string>
     <string name="header_discount">가격 : %s</string>
     <string name="recent_search">최근 검색어</string>
+    <string name="show_wv">책 상세보기</string>
 </resources>
