--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="KeyWord">검색할 책 이름을 입력해 주세요</string>
     <string name="header_author">저자 : %s</string>
     <string name="header_publisher">출판사 : %s</string>
-    <string name="header_discount">가격 : %s</string>
+    <string name="header_discount">가격 : %s 원</string>
     <string name="recent_search">최근 검색어</string>
     <string name="show_wv">책 상세보기</string>
 </resources>
